--- a/index.html
+++ b/index.html
@@ -7,33 +7,40 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
-  <h1>5280 Landmarks</h1>
+    <header>
+      <h1>5280 Landmarks</h1>
+      <a href id="Login">Login</a>
+    </header>
+    <subheader>
+      <a href>Buildings</a>
+      <a href>Art</a>
+      <a href>Featured</a>
+    </subheader>
+    <img src="images/1.jpg" id="Art Museum">
+    <h2>Denver Art Museum</h2> 
+    <br>
+    <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.</p>
+    <br>
+    <p>Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.</p>
+    <br>
+    <p>Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.</p>
+    <br>
+    <p>Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.</p>
+    <br>
+    <aside class="aside">
+      <h3>Larimer Square</h3>
+      <img src="images/2.jpg" class="Side Image">
+      <br>
+      <h3>Millenium Bridge</h3>
+      <img src="images/3.jpg" class="Side Image">
+      <br>
+      <h3>Molly Brown House</h3>
+      <img src="images/4.jpg" class="Side Image">
+    </aside>
 
-<a href>Login</a> 
-<a href>Buildings</a>
-<a href>Art</a>
-<a href>Featured</a>
-<img src="images/1.jpg">
-<h2>Denver Art Museum</h2> 
-
-<p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.</p>
-<br>
-<p>Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.</p>
-<br>
-<p>Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.</p>
-<br>
-<p>Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.</p>
-<br>
-<h3>Larimer Square</h3>
-<img src="images/2.jpg">
-
-## Millenium Bridge
-
-## Molly Brown House
-
-## Footer
-
-Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.
+    <footer>
+      <p>Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.</p>
+    </footer>
   </body>
 </html>
 
