--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
+
   <body>
     <section id="header">
       <a href id="login">Login</a>
@@ -13,7 +14,7 @@
     </section>
 
     <section id="subheader">
-        <a href class="link">Buildings</a>
+        <a href class="link">Building</a>
         <a href class="link">Art</a>
         <a href class="link">Featured</a>
     </section>
